--- a/wn/css/yogaforwomen.css
+++ b/wn/css/yogaforwomen.css
@@ -15,5 +15,8 @@
   text-transform: uppercase;
   box-shadow: 0px 5px 21px 0px rgba(254, 119, 101, 0.2); 
 }
+.btn-register{
+  background-color: #EB3656;
+}
 
 
